--- a/Dockerfile.paas-friendly
+++ b/Dockerfile.paas-friendly
@@ -1,6 +1,6 @@
 # ==========================================
-# DomMate - Node.js 22 Alpine版 Dockerfile
-# 支持容器内前端构建的完整流程
+# DomMate - PaaS平台友好版本
+# 解决容器平台权限问题
 # ==========================================
 
 FROM node:22-alpine
@@ -12,7 +12,7 @@ ENV SERVER_PORT=3001
 ENV DATABASE_PATH=/app/data/domains.db
 ENV BACKUP_DIR=/app/data/backups
 
-# 安装额外依赖
+# 安装额外依赖（包括su-exec用于安全用户切换）
 RUN apk add --no-cache \
     sqlite \
     curl \
@@ -20,23 +20,28 @@ RUN apk add --no-cache \
     python3 \
     make \
     g++ \
+    su-exec \
+    sudo \
     && rm -rf /var/cache/apk/*
 
 # 创建应用用户
 RUN addgroup -g 1001 -S dommate && \
     adduser -S dommate -u 1001 -G dommate
 
+# PaaS平台兼容：添加dommate用户到sudo组
+RUN echo "dommate ALL=(ALL) NOPASSWD: ALL" >> /etc/sudoers
+
 # 设置工作目录
 WORKDIR /app
 
-# 创建必要目录
+# 创建必要目录（宽松权限）
 RUN mkdir -p /app/data /app/logs /app/backups /app/temp/exports && \
-    chown -R dommate:dommate /app
+    chmod -R 777 /app/data /app/logs /app/backups /app/temp
 
 # 复制package文件
 COPY --chown=dommate:dommate package*.json ./
 
-# 设置npm配置并安装所有依赖（包括devDependencies用于构建）
+# 设置npm配置并安装依赖
 RUN npm config set registry https://registry.npmmirror.com/ || \
     npm config set registry https://registry.npm.taobao.org/ || \
     echo "使用默认registry" && \
@@ -44,7 +49,7 @@ RUN npm config set registry https://registry.npmmirror.com/ || \
     npm install --legacy-peer-deps --no-audit --no-fund && \
     npm cache clean --force
 
-# 复制源码文件（用于前端构建）
+# 复制源码文件
 COPY --chown=dommate:dommate src/ ./src/
 COPY --chown=dommate:dommate public/ ./public/
 COPY --chown=dommate:dommate astro.config.mjs ./
@@ -54,7 +59,7 @@ COPY --chown=dommate:dommate server/ ./server/
 COPY --chown=dommate:dommate domain-config.js ./
 COPY --chown=dommate:dommate env.example ./.env.example
 
-# 构建前端（使用JavaScript fallback策略）
+# 构建前端
 RUN echo "🏗️ 开始容器内前端构建..." && \
     export ROLLUP_NO_NATIVE=1 && \
     export NODE_OPTIONS="--max_old_space_size=4096" && \
@@ -67,90 +72,62 @@ RUN echo "🏗️ 开始容器内前端构建..." && \
         echo "✅ Fallback构建完成"; \
     fi
 
-# 清理构建依赖，保留运行时依赖
+# 清理构建依赖
 RUN npm prune --production && \
     npm cache clean --force
 
-# 创建启动脚本
+# 创建PaaS友好的启动脚本
 RUN cat > /app/entrypoint.sh << 'EOF'
 #!/bin/bash
 set -e
 
-echo "🚀 DomMate 容器启动中..."
+echo "🚀 DomMate PaaS平台启动中..."
 echo "📊 Node.js 版本: $(node --version)"
-echo "📊 npm 版本: $(npm --version)"
 echo "📊 系统架构: $(uname -m)"
-echo "📊 Alpine 版本: $(cat /etc/alpine-release)"
-echo "📊 运行用户: $(whoami)"
+echo "📊 当前用户: $(whoami)"
+echo "📊 用户ID: $(id)"
 
-# PaaS平台权限自动修复
-echo "🔧 PaaS平台权限检查和修复..."
+# PaaS平台权限自适应处理
+echo "🔧 PaaS平台权限自适应处理..."
 
-# 临时切换到root用户进行权限修复
-if [ "$(whoami)" != "root" ]; then
-    echo "⚠️ 非root用户，尝试sudo修复权限..."
-    sudo mkdir -p /app/data/backups 2>/dev/null || {
-        echo "❌ sudo不可用，尝试其他方法..."
-        # 尝试直接创建，如果失败则以root身份重启脚本
-        mkdir -p /app/data/backups 2>/dev/null || {
-            echo "🔄 权限不足，尝试以root身份执行初始化..."
-            exec sudo -u root /app/entrypoint.sh "$@"
-        }
-    }
-else
-    echo "✅ 以root用户运行，进行权限初始化..."
-    # 确保数据目录存在并设置正确权限
+# 方法1: 尝试直接创建目录
+if mkdir -p /app/data/backups 2>/dev/null; then
+    echo "✅ 直接权限创建成功"
+elif [ "$(whoami)" = "root" ]; then
+    # 方法2: 如果是root用户，设置权限后切换用户
+    echo "🔧 Root用户，设置权限后切换到dommate用户..."
     mkdir -p /app/data/backups /app/logs /app/temp/exports
-    chown -R dommate:dommate /app/data /app/logs /app/backups /app/temp 2>/dev/null || {
-        echo "⚠️ chown失败，使用chmod设置权限..."
+    chown -R dommate:dommate /app/data /app/logs /app/backups /app/temp 2>/dev/null || \
         chmod -R 777 /app/data /app/logs /app/backups /app/temp
-    }
-    
-    # 切换到dommate用户继续执行
-    echo "🔄 切换到dommate用户继续启动..."
-    export HOME=/home/dommate
-    exec su-exec dommate "$0" "$@"
+    exec su-exec dommate "$0" "$@"  
+else 
+    # 方法3: 尝试sudo权限修复
+    echo "🔧 尝试sudo权限修复..."
+    if sudo mkdir -p /app/data/backups /app/logs /app/temp/exports 2>/dev/null; then
+        sudo chown -R dommate:dommate /app/data /app/logs /app/backups /app/temp 2>/dev/null || \
+            sudo chmod -R 777 /app/data /app/logs /app/backups /app/temp
+        echo "✅ Sudo权限修复成功"
+    else
+        # 方法4: 权限修复失败，使用临时目录
+        echo "⚠️ 权限修复失败，使用临时目录模式..."
+        export DATABASE_PATH="/tmp/domains.db"
+        export BACKUP_DIR="/tmp/backups"
+        mkdir -p /tmp/backups
+        echo "📁 使用临时数据库: $DATABASE_PATH"
+    fi
 fi
 
-# 以下代码以dommate用户身份执行
-echo "📁 验证数据目录权限..."
-if [ -w "/app/data" ]; then
-    echo "✅ 数据目录权限正常"
-    # 确保子目录存在
-    mkdir -p /app/data/backups 2>/dev/null || echo "⚠️ 无法创建backups目录，但继续启动..."
-else
-    echo "⚠️ 数据目录权限不足，但继续启动..."
-fi
-
-# 显示环境信息
-echo "⚙️ 环境配置:"
+# 显示最终配置
+echo "⚙️ 最终配置:"
 echo "  • 数据库路径: ${DATABASE_PATH}"
 echo "  • 备份目录: ${BACKUP_DIR}"
 echo "  • 服务端口: ${SERVER_PORT}"
-echo "  • Node环境: ${NODE_ENV}"
 
-# 检查前端构建产物
+# 检查构建产物
 if [ -f "/app/dist/index.html" ]; then
     echo "✅ 前端构建产物存在"
-    echo "📊 前端文件数量: $(ls /app/dist/ | wc -l)"
-    ls -la /app/dist/
 else
     echo "❌ 前端构建产物缺失"
-fi
-
-# 检查server目录
-if [ -f "/app/server/index.js" ]; then
-    echo "✅ 后端服务文件存在"
-else
-    echo "❌ 后端服务文件缺失"
-fi
-
-# 检查运行时依赖
-if [ -d "/app/node_modules" ]; then
-    echo "✅ Node.js运行时依赖存在"
-    echo "📦 依赖包数量: $(ls /app/node_modules/ | wc -l)"
-else
-    echo "❌ Node.js依赖缺失"
 fi
 
 echo "🎯 启动DomMate应用..."
@@ -158,12 +135,7 @@ exec "$@"
 EOF
 
 # 设置权限
-RUN chmod +x /app/entrypoint.sh && \
-    chown dommate:dommate /app/entrypoint.sh && \
-    chown -R dommate:dommate /app
-
-# 切换到应用用户
-USER dommate
+RUN chmod +x /app/entrypoint.sh
 
 # 暴露端口
 EXPOSE 3001
@@ -172,6 +144,6 @@ EXPOSE 3001
 HEALTHCHECK --interval=30s --timeout=10s --start-period=30s --retries=3 \
     CMD curl -f http://localhost:${SERVER_PORT}/health || exit 1
 
-# 启动应用
+# 使用灵活的启动方式
 ENTRYPOINT ["/app/entrypoint.sh"]
 CMD ["node", "server/index.js"] 
